--- a/src/components/stay-conected.astro
+++ b/src/components/stay-conected.astro
@@ -1,10 +1,9 @@
 <div class="modal" id="modal" style="display: none;">
   <div class="stay-connected">
     <div class="stay-connected__wrapper">
-      <img
-        class="stay-connected__title"
-        src="/assets/images/stay-connected-title.png"
-      />
+      <h2 class="stay-connected__title">
+        STAY CONNECTED
+      </h2>
       <p class="stay-connected__text">
         Sign up for the latest news and information about hypophosphatasia
         and/or be connected with your local Alexion representative.
