--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,13 +7,13 @@ import Layout from "../layouts/Layout.astro";
   <div class="reference">
     <img src="/assets/images/freeze-title.png" class="page__not_found__title">
     <div class="page__not_found__text">
-      <p>All units be advised… it seems like someone’s been tampering with our network.</p>
+      <p class="first-child">All units be advised… it seems like someone’s been tampering with our network.</p>
       
       <p>The site will be back once we catch the culprit!</p>
     </div>  
-    <a href="/" class="button">Return to Headquarters</a>
+    <a href="/" class="button modifier">Return to Headquarters</a>
     <img src="/assets/images/error-frame.png" alt="" class="page__not_found__image">
-    <div class="red-string"></div>
+    <div class="red-string modifier"></div>
   </div>
 </Layout>
  
