fix: :construction: Fix skeleton styles
\

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -467,6 +467,7 @@ const internalNavLinks = [
 
             <section class="skeleton-container__skeleton">
               <SkeletonDesktop type="infants" />
+              <SkeletonMobile type="infants" />
             </section>
           </article>
 
