--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -454,7 +454,7 @@
             }
 
             .skeleton__line--after2 {
-                width: 25%;
+                width: 50%;
                 top: 32.4rem;
                 left: 8.5rem;
                 z-index: 0;
@@ -488,7 +488,7 @@
             }
 
             .skeleton__line--after2 {
-                width: 25%;
+                width: 50%;
                 top: 37.2rem;
                 left: 8.6rem;
                 z-index: 0;
@@ -851,8 +851,8 @@
 
     &__content {
         width: fit-content;
-        max-width: 400px;
-        height: fit-content;
+        max-width: 500px;
+        height: 455px;
         border: 1px solid $color-red;
         padding: 1.5rem;
         position: relative;
@@ -860,6 +860,7 @@
         display: none;
         flex-direction: column;
         @include flex-gap(1rem);
+        box-sizing: content-box;
 
         &--active {
             display: flex;
@@ -869,6 +870,7 @@
             padding: 0;
             width: 100%;
             max-width: 100%;
+            height: auto;
             display: none;
             border: none;
         }
@@ -902,6 +904,11 @@
         &--img {
             display: flex;
             @include flex-gap(0.5rem);
+            width: auto;
+
+            img {
+                width: auto;
+            }
         }
 
         &--conditions {
